--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "bs-custom-file-input": "^1.3.4",
+    "jquery": "^3.4.1",
     "mdbreact": "^4.25.4",
     "rc-datepicker": "^5.0.15",
     "react": "^16.13.0",
